assets/custom-theme.scss
@import "reveal-js/dist/theme/template/mixins";
@import "reveal-js/dist/theme/template/settings";

// Include theme-specific fonts


// Sans-serif
// @import url('reveal-js/lib/font/source-sans-pro/source-sans-pro.css');
// @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
// @import url('https://fonts.googleapis.com/css2?family=Ubuntu');
@import url('https://fonts.googleapis.com/css2?family=Signika+Negative');
// @import url('https://fonts.googleapis.com/css2?family=Open+Sans');

// Serif
// @import url('https://fonts.googleapis.com/css2?family=Cinzel');

// Handwriting

// @import url('https://fonts.googleapis.com/css2?family=Dancing+Script');
// @import url('https://fonts.googleapis.com/css2?family=Satisfy');

// Display
// @import url('https://fonts.googleapis.com/css2?family=Fredoka+One');

// Monospace
@import url('https://fonts.googleapis.com/css2?family=Inconsolata');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono');
// @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono');

//$backgroundColor: rgba(242, 248, 252, 0.58);
//$backgroundColor: #EFF1ED;
$backgroundColor: #f3f8fc;

$mainColor: #102f47;
$headingColor: #0b75c9;
$accentBlue: #39a7ee;
$blue: #2479bd;
$deepBlue: #063f72;
$softBlue: #dff2ff;
$paperWhite: #ffffff;
$uniboRed: #bb2e29;
$mutedInk: #52616d;
$cardShadow: 0 0.45rem 1.35rem rgba(6, 63, 114, 0.13);

$mainFontSize: 2.2em;
// $mainFont: 'Roboto', sans-serif;
// $headingFont: 'Roboto', sans-serif;
// $mainFont: 'Source Sans Pro', Helvetica, sans-serif;
// $headingFont: 'Source Sans Pro', Helvetica, sans-serif;
// $mainFont: 'Ubuntu';
// $headingFont: 'Ubuntu';
$mainFont: 'Signika Negative';
$headingFont: 'Signika Negative';
// $mainFont: 'Open Sans';
// $headingFont: 'Open Sans';

$headingLetterSpacing: normal;
$headingFontWeight: 600;
$linkColor: $accentBlue;
$linkColorHover: lighten( $linkColor, 18% );
$selectionBackgroundColor: rgba(30, 155, 240, 0.28);
$detailBackgroundColor: #dae5e9;
$logo: url("../static/example-background.svg");

$heading1Size: 2.2em;
$heading2Size: 1.6em;
$heading3Size: 1.3em;
$heading4Size: 1.0em;

@import "reveal-js/dist/theme/template/theme";

section.has-light-background {
	$detailBackgroundColor: #d9ecf8 !global;
	$logo: url("../static/example-background.svg") !global;
	h1, h4, h5, h6 {
		color: $deepBlue;
	}
	h2 {
		color: $headingColor;
	}
	h3 {
		color: $uniboRed;
	}
	& {
		color: $mainColor;
	}
}

.custom.red {
    color: $deepBlue;//#b81f0b
    transition: color 0.5s ease;
}

.reveal .fragment.visible.custom.red {
    color: $uniboRed !important;
}

p.fragment.fade-out {
    transition: opacity 0.5s ease; /* Transizione per la scomparsa */
}

.reveal .fragment.visible p.fragment.fade-out {
    opacity: 0; /* Scompare il paragrafo */
}


.reveal pre {
	margin: 1em auto;
}

.reveal strong,
.reveal b {
	font-weight: bold;
	color: $blue; //#b81f0b
}

.reveal em {
	font-style: italic;
	color: #0e2231;
}

.reveal section img {
	border: 0em;
	box-shadow: none;
    max-width: 100%;
    max-height: 23em;
    height: auto;
	object-fit: contain;
}

.reveal code {
	color: #095aa6;
	font-family: "JetBrains Mono", "Oxygen Mono", "Roboto Mono", "Ubuntu Mono", "Courier New", Courier, monospace;
	font-weight: normal;
	line-height: normal;
	font-size: larger;
}

.reveal mjx-container[jax="SVG"][display="true"] {
	font-size: 1.08em !important;
}

.reveal pre code {
	color: black;
	background-color: #ffffff;
}

.reveal h3 {
	margin: .5em 0 0;
}

.reveal ul {
	margin: .2em .2em .2em;
}

.gist-it-gist .gist-file .gist-data pre, .gister-gist .gist-file .gist-data pre {
	box-shadow: none !important;
}

// Nice blockquote and cite

.reveal blockquote {
	width:90%;
	margin:0.3em auto;
	font-family: 'Satisfy';
	font-style: normal;
	font-size: 1.2em;
	color: #333333;
	padding:0.1em 0.1em 0.1em 0.1em;
	border-color: #AD2624;
	border-style: solid;
	border-width: 0.1em;
	border-radius: 1em;
	border-left:0.7em solid #AD2624 ;
	line-height: 1.2em;
	position: relative;
	background:#EDEDED;
	text-align: center;
}

.reveal blockquote::before{
	font-family:Arial;
	content: "\201C";
	color: rgba(255, 255, 255, 0);
	font-size: 4em;
	position: absolute;
	left: 0.05em;
	top: 0.25em;
}

.reveal blockquote p::before{
	content: "";
	padding-left: 2em;
}

.reveal blockquote::after{
	font-family:Arial;
	content: "\201D";
	color: rgba(255, 255, 255, 0);
	font-size: 4em;
	position: absolute;
	bottom: -0.2em;
	right: 0.1em;
}

.reveal cite::before {
	content: "— ";
}

.reveal cite {
	display: block;
	text-align: right;
	padding-right: 10%;
	padding-top: 0.5em;
	font-weight: bolder;
	font-family: 'Cinzel';
	font-size: 0.7em;
}

.gist-it-gist .gist-file .gist-data pre, .gister-gist .gist-file .gist-data pre {
	box-shadow: none !important;
}

// Mermaid graph resizing

.mermaid svg {
	max-width: 100% !important;
	max-height: 45vh !important;
	height: 20%;
	width: 100vw;
	transition: transform 0.3s ease;
	font-weight: bold;
	border-width: 0.1em;
	border-style: none;
}


// Keyboard keys

kbd {
  display: inline-block;
  min-width: 1em;
  text-align: center;
  padding: 0.1em 0.4em;
  font-size: 0.8em;
  margin-left: 0.1em;
  margin-right: 0.2em;
  color: $mainColor;
  background-color: $backgroundColor;
  border-radius: 0.2em;
  border-style: solid;
  border-width: 0.1em;
  box-shadow: 0 0 0.1em $mainColor, 0.1em 0.1em 0em $mainColor;
  font-family: 'Inconsolata';
  font-weight: normal;
}

.multiCol {
	display: flex;
	align-items: center;
	vertical-align: baseline;
	text-align: left;
	width: 100%;
}

.col-25 {
	width: 25%;
}

.col-50 {
	width: 50%;
}

.col-75 {
	width: 75%;
}

.green {
	color: green;
}

.red {
	color: red;
}

.white {
	color: white;
}

.text-center {
	text-align: center;
}

.flex {
	display: flex;
	justify-content: center;
}

.reveal .nohighlight {
	max-height: 100vh;
}
/* ... */

